# tinyland-caldav-client

./: .bazelrc  .npmrc  BUILD.bazel  MODULE.bazel  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: calendar-client.ts  config.ts  errors.ts  ical-utils.ts  index.ts  xml-utils.ts
tests/: caldav-client.test.ts
